fixing overflow x scroll for prod

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,8 +2,6 @@
 
 @variant dark (&:where(.dark, .dark *));
 
-
-
 @layer theme {
   :root {
     
@@ -31,11 +29,16 @@
   }
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   font-family: var(--font-montserrat), sans-serif;
   background-color: var(--color-bg-page);
   color: var(--color-text-primary);
   transition: background-color 0.3s ease, color 0.3s ease;
+  overflow-x: hidden;
 }
 
 /* Utility classes */
